# fast_project

./: .coverage  LICENSE  README.md  pyproject.toml
tests/: test_app.py
