[tool.poetry]
name = "fast-project"
version = "0.1.0"
description = ""
authors = ["Raimundo Andrade de Lima Neto  <andradeneto1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fast_project/app.py'
test = 'pytest -s -x --cov=fast_project -vv'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
